# Ultimate-AMV

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cacheclean.bat  dev-uninstall.bat  index.html  package-lock.json  package.json  tools.json
.github/workflows/: release.yml
Ultimate AMV toolkit/: Ultimate AMV.html  styles.css  tweaks-panel.jsx
Ultimate AMV toolkit/components/: atoms.jsx  views.jsx  vocal.jsx
backend/: audio_cli.py  bgremove_cli.py  clip_cli.py
backend/amv_audio/: config.py  gpu.py  separator.py  setup.py
backend/amv_bgremove/: models.py  processor.py
backend/tests/: test_audio_cli.py  test_bgremove_cli.py
src/: SetupWizard.tsx  main.tsx  styles.css  styles.css.backup
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_cmds.rs  background_img.rs  bgremove_cmds.rs  clips.rs  config.rs  discord.rs  downloads.rs  lib.rs  logging.rs  preview.rs  python_env.rs  sniffer.rs  tools.rs  video_cmds.rs
src/components/: Dropdown.tsx
src/features/audio/: AudioExtractionPanel.tsx  DepInstallCard.test.tsx  DepInstallCard.tsx  ExtractionProgressCard.tsx  MediaToAudioPanel.tsx  SelectFileButton.tsx
src/features/bgremove/: BgRemovePanel.test.tsx  BgRemovePanel.tsx  BgRemoveProgressCard.tsx
src/features/clips/: ClipCompatConvertModal.tsx  ClipExportProgressModal.test.tsx  ClipExportProgressModal.tsx  ClipExtractorPanel.tsx  ClipPreviewScroller.tsx  ClipPreviewTile.test.tsx  ClipPreviewTile.tsx  SceneViewerModal.tsx
src/lib/: background.test.ts  background.ts  constants.test.ts  constants.ts  discord.ts
src/shell/: App.tsx  Root.test.tsx  Root.tsx  SidebarButton.test.tsx  SidebarButton.tsx  WindowChrome.tsx
src/styles/: anime.css  audio.css  base.css  clips.css  components.css  downloader.css  modals.css  shell.css
src/types/: audio.ts  clip.ts  download.ts
tests/setup/: tauri.ts
(+26 files in other folders)
