[package]
name = "ultimate-amv-script"
version = "0.8.0"
description = "Ultimate AMV desktop workspace"
authors = ["ElishaPervez"]
edition = "2021"

[lib]
name = "ultimate_amv_script_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
tokio = { version = "=1.40.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "4", default-features = false, features = ["deflate"] }
futures-util = "0.3"
discord-rich-presence = "0.2"
